[CI] Publish Documentation for 64e4b4a0d719c45ad7cfd932aaf30b9cc3f30787 - 64e4b4a0d719c45ad7cfd932aaf30b9cc3f30787 🚀

--- a/ansible-operator-road-trip-guide/main/06-deploying-your-operator-using-olm.html
+++ b/ansible-operator-road-trip-guide/main/06-deploying-your-operator-using-olm.html
@@ -574,7 +574,7 @@ Don’t forget to make the image repository public!
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="_images/olm-diagram-1.svg" alt="OLM Registry">
+<img src="_images/olm-diagram-1.png" alt="OLM Registry">
 </div>
 </div>
 <div class="paragraph">
